content/_generated-doc/3.2/config/quarkus-kotlin-serialization-kotlin-serialization-config.adoc

:summaryTableId: quarkus-kotlin-serialization-kotlin-serialization-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kotlin-serialization-kotlin-serialization-config_configuration]]link:#quarkus-kotlin-serialization-kotlin-serialization-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-allow-special-floating-point-values]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-allow-special-floating-point-values[quarkus.kotlin-serialization.json.allow-special-floating-point-values]`


[.description]
--
Removes JSON specification restriction on special floating-point values such as `NaN` and `Infinity` and enables their serialization and deserialization. When enabling it, please ensure that the receiving party will be able to encode and decode these special values.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_ALLOW_SPECIAL_FLOATING_POINT_VALUES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_ALLOW_SPECIAL_FLOATING_POINT_VALUES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-allow-structured-map-keys]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-allow-structured-map-keys[quarkus.kotlin-serialization.json.allow-structured-map-keys]`


[.description]
--
Enables structured objects to be serialized as map keys by changing serialized form of the map from JSON object (key-value pairs) to flat array like `++[++k1, v1, k2, v2++]++`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_ALLOW_STRUCTURED_MAP_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_ALLOW_STRUCTURED_MAP_KEYS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-class-discriminator]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-class-discriminator[quarkus.kotlin-serialization.json.class-discriminator]`


[.description]
--
Name of the class descriptor property for polymorphic serialization.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_CLASS_DISCRIMINATOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_CLASS_DISCRIMINATOR+++`
endif::add-copy-button-to-env-var[]
--|string 
|`type`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-coerce-input-values]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-coerce-input-values[quarkus.kotlin-serialization.json.coerce-input-values]`


[.description]
--
Enables coercing incorrect JSON values to the default property value in the following cases: 1. JSON value is `null` but property type is non-nullable. 2. Property type is an enum type, but JSON value contains unknown enum member.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_COERCE_INPUT_VALUES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_COERCE_INPUT_VALUES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-encode-defaults]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-encode-defaults[quarkus.kotlin-serialization.json.encode-defaults]`


[.description]
--
Specifies whether default values of Kotlin properties should be encoded.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_ENCODE_DEFAULTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_ENCODE_DEFAULTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-explicit-nulls]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-explicit-nulls[quarkus.kotlin-serialization.json.explicit-nulls]`


[.description]
--
Specifies whether `null` values should be encoded for nullable properties and must be present in JSON object during decoding.

When this flag is disabled properties with `null` values without default are not encoded; during decoding, the absence of a field value is treated as `null` for nullable properties without a default value.

`true` by default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_EXPLICIT_NULLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_EXPLICIT_NULLS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-ignore-unknown-keys]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-ignore-unknown-keys[quarkus.kotlin-serialization.json.ignore-unknown-keys]`


[.description]
--
Specifies whether encounters of unknown properties in the input JSON should be ignored instead of throwing ++[++SerializationException++]++.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_IGNORE_UNKNOWN_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_IGNORE_UNKNOWN_KEYS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-is-lenient]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-is-lenient[quarkus.kotlin-serialization.json.is-lenient]`


[.description]
--
Removes JSON specification restriction (RFC-4627) and makes parser more liberal to the malformed input. In lenient mode quoted boolean literals, and unquoted string literals are allowed.

Its relaxations can be expanded in the future, so that lenient parser becomes even more permissive to invalid value in the input, replacing them with defaults.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_IS_LENIENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_IS_LENIENT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-pretty-print]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-pretty-print[quarkus.kotlin-serialization.json.pretty-print]`


[.description]
--
Specifies whether resulting JSON should be pretty-printed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_PRETTY_PRINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_PRETTY_PRINT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-pretty-print-indent]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-pretty-print-indent[quarkus.kotlin-serialization.json.pretty-print-indent]`


[.description]
--
Specifies indent string to use with ++[++prettyPrint++]++ mode

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_PRETTY_PRINT_INDENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_PRETTY_PRINT_INDENT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`    `


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-use-alternative-names]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-use-alternative-names[quarkus.kotlin-serialization.json.use-alternative-names]`


[.description]
--
Specifies whether Json instance makes use of ++[++JsonNames++]++ annotation.

Disabling this flag when one does not use ++[++JsonNames++]++ at all may sometimes result in better performance, particularly when a large count of fields is skipped with ++[++ignoreUnknownKeys++]++.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_USE_ALTERNATIVE_NAMES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_USE_ALTERNATIVE_NAMES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-use-array-polymorphism]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-use-array-polymorphism[quarkus.kotlin-serialization.json.use-array-polymorphism]`


[.description]
--
Switches polymorphic serialization to the default array format. This is an option for legacy JSON format and should not be generally used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_USE_ARRAY_POLYMORPHISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_USE_ARRAY_POLYMORPHISM+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-naming-strategy]]`link:#quarkus-kotlin-serialization-kotlin-serialization-config_quarkus-kotlin-serialization-json-naming-strategy[quarkus.kotlin-serialization.json.naming-strategy]`


[.description]
--
Specifies the `JsonNamingStrategy` that should be used for all properties in classes for serialization and deserialization. This strategy is applied for all entities that have `StructureKind.CLASS`.



`null` by default.



This element can be one of two things:

 . the fully qualified class name of a type implements the `NamingStrategy` interface and has a no-arg constructor
 - a value in the form `NamingStrategy.SnakeCase` which refers to built-in values provided by the kotlin serialization library itself.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KOTLIN_SERIALIZATION_JSON_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KOTLIN_SERIALIZATION_JSON_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===